TextEdit/Expressions/Parser/ExpressionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Dev\NeoEdit\Common\Expressions\Source\ExpressionParser.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace NeoEdit.TextEdit.Expressions.Parser {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class ExpressionParser : Parser {
	public const int
		DEBUG=1, LPAREN=2, RPAREN=3, COMMA=4, METHOD=5, BANG=6, EXPOP=7, MULTOP=8, 
		ADDOP=9, SHIFTOP=10, EQUALITYOP=11, RELATIONALOP=12, CONVERSION=13, BITWISENOT=14, 
		BITWISEAND=15, BITWISEXOR=16, BITWISEOR=17, LOGICALAND=18, LOGICALOR=19, 
		NULLCOALESCE=20, CONDITIONAL=21, ELSE=22, DOT=23, CONSTANT=24, STRSTART=25, 
		VSTRSTART=26, ISTRSTART=27, VISTRSTART=28, TRUE=29, FALSE=30, NULL=31, 
		INTEGER=32, FLOAT=33, HEX=34, VARIABLE=35, CURRENCY=36, WHITESPACE=37, 
		ISTRINTEREND=38, STRCHARS=39, STRESCAPE=40, STRUNICODE=41, STREND=42, 
		VSTRCHARS=43, VSTRQUOTE=44, VSTREND=45, ISTRCHARS=46, ISTRLITERAL=47, 
		ISTRINTERSTA=48, ISTREND=49, VISTRCHARS=50, VISTRLITERAL=51, VISTRINTERSTA=52, 
		VISTREND=53;
	public const int
		RULE_expr = 0, RULE_form = 1, RULE_e = 2, RULE_value = 3, RULE_units = 4, 
		RULE_unit = 5, RULE_normalstring = 6, RULE_strcontent = 7, RULE_strchars = 8, 
		RULE_strescape = 9, RULE_strunicode = 10, RULE_verbatimstring = 11, RULE_vstrcontent = 12, 
		RULE_vstrchars = 13, RULE_vstrquote = 14, RULE_interpolatedstring = 15, 
		RULE_istrcontent = 16, RULE_istrchars = 17, RULE_istrliteral = 18, RULE_istrinter = 19, 
		RULE_verbatiminterpolatedstring = 20, RULE_vistrcontent = 21, RULE_vistrchars = 22, 
		RULE_vistrliteral = 23, RULE_vistrinter = 24;
	public static readonly string[] ruleNames = {
		"expr", "form", "e", "value", "units", "unit", "normalstring", "strcontent", 
		"strchars", "strescape", "strunicode", "verbatimstring", "vstrcontent", 
		"vstrchars", "vstrquote", "interpolatedstring", "istrcontent", "istrchars", 
		"istrliteral", "istrinter", "verbatiminterpolatedstring", "vistrcontent", 
		"vistrchars", "vistrliteral", "vistrinter"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'('", "')'", "','", null, "'!'", "'^'", null, null, null, 
		null, null, "'=>'", "'~'", "'&'", "'^^'", "'|'", "'&&'", "'||'", "'??'", 
		"'?'", "':'", "'.'", null, null, "'@\"'", "'$\"'", null, null, null, null, 
		null, null, null, null, null, null, "'}'", null, null, null, null, null, 
		"'\"\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DEBUG", "LPAREN", "RPAREN", "COMMA", "METHOD", "BANG", "EXPOP", 
		"MULTOP", "ADDOP", "SHIFTOP", "EQUALITYOP", "RELATIONALOP", "CONVERSION", 
		"BITWISENOT", "BITWISEAND", "BITWISEXOR", "BITWISEOR", "LOGICALAND", "LOGICALOR", 
		"NULLCOALESCE", "CONDITIONAL", "ELSE", "DOT", "CONSTANT", "STRSTART", 
		"VSTRSTART", "ISTRSTART", "VISTRSTART", "TRUE", "FALSE", "NULL", "INTEGER", 
		"FLOAT", "HEX", "VARIABLE", "CURRENCY", "WHITESPACE", "ISTRINTEREND", 
		"STRCHARS", "STRESCAPE", "STRUNICODE", "STREND", "VSTRCHARS", "VSTRQUOTE", 
		"VSTREND", "ISTRCHARS", "ISTRLITERAL", "ISTRINTERSTA", "ISTREND", "VISTRCHARS", 
		"VISTRLITERAL", "VISTRINTERSTA", "VISTREND"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ExpressionParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ExpressionParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ExprContext : ParserRuleContext {
		public FormContext form() {
			return GetRuleContext<FormContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ExpressionParser.Eof, 0); }
		public ITerminalNode DEBUG() { return GetToken(ExpressionParser.DEBUG, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 0, RULE_expr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			_la = TokenStream.La(1);
			if (_la==DEBUG) {
				{
				State = 50; Match(DEBUG);
				}
			}

			State = 53; form();
			State = 54; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormContext : ParserRuleContext {
		public FormContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_form; } }
	 
		public FormContext() { }
		public virtual void CopyFrom(FormContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ShortFormContext : FormContext {
		public IToken op;
		public ITerminalNode EXPOP() { return GetToken(ExpressionParser.EXPOP, 0); }
		public ITerminalNode MULTOP() { return GetToken(ExpressionParser.MULTOP, 0); }
		public ITerminalNode ADDOP() { return GetToken(ExpressionParser.ADDOP, 0); }
		public ITerminalNode SHIFTOP() { return GetToken(ExpressionParser.SHIFTOP, 0); }
		public ITerminalNode RELATIONALOP() { return GetToken(ExpressionParser.RELATIONALOP, 0); }
		public ITerminalNode EQUALITYOP() { return GetToken(ExpressionParser.EQUALITYOP, 0); }
		public ITerminalNode BITWISEAND() { return GetToken(ExpressionParser.BITWISEAND, 0); }
		public ITerminalNode BITWISEXOR() { return GetToken(ExpressionParser.BITWISEXOR, 0); }
		public ITerminalNode BITWISEOR() { return GetToken(ExpressionParser.BITWISEOR, 0); }
		public ITerminalNode LOGICALAND() { return GetToken(ExpressionParser.LOGICALAND, 0); }
		public ITerminalNode LOGICALOR() { return GetToken(ExpressionParser.LOGICALOR, 0); }
		public ITerminalNode NULLCOALESCE() { return GetToken(ExpressionParser.NULLCOALESCE, 0); }
		public ShortFormContext(FormContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShortForm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefaultOpFormContext : FormContext {
		public DefaultOpFormContext(FormContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefaultOpForm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LongFormContext : FormContext {
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public LongFormContext(FormContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLongForm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormContext form() {
		FormContext _localctx = new FormContext(Context, State);
		EnterRule(_localctx, 2, RULE_form);
		int _la;
		try {
			State = 59;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new LongFormContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 56; e(0);
				}
				break;
			case 2:
				_localctx = new ShortFormContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 57;
				((ShortFormContext)_localctx).op = TokenStream.Lt(1);
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXPOP) | (1L << MULTOP) | (1L << ADDOP) | (1L << SHIFTOP) | (1L << EQUALITYOP) | (1L << RELATIONALOP) | (1L << BITWISEAND) | (1L << BITWISEXOR) | (1L << BITWISEOR) | (1L << LOGICALAND) | (1L << LOGICALOR) | (1L << NULLCOALESCE))) != 0)) ) {
					((ShortFormContext)_localctx).op = ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				}
				break;
			case 3:
				_localctx = new DefaultOpFormContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EContext : ParserRuleContext {
		public EContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_e; } }
	 
		public EContext() { }
		public virtual void CopyFrom(EContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AddContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode ADDOP() { return GetToken(ExpressionParser.ADDOP, 0); }
		public AddContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ShiftContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode SHIFTOP() { return GetToken(ExpressionParser.SHIFTOP, 0); }
		public ShiftContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShift(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NullCoalesceContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode NULLCOALESCE() { return GetToken(ExpressionParser.NULLCOALESCE, 0); }
		public NullCoalesceContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNullCoalesce(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TernaryContext : EContext {
		public EContext condition;
		public EContext trueval;
		public EContext falseval;
		public ITerminalNode CONDITIONAL() { return GetToken(ExpressionParser.CONDITIONAL, 0); }
		public ITerminalNode ELSE() { return GetToken(ExpressionParser.ELSE, 0); }
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public TernaryContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTernary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParensContext : EContext {
		public EContext val;
		public ITerminalNode LPAREN() { return GetToken(ExpressionParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(ExpressionParser.RPAREN, 0); }
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public ParensContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstantContext : EContext {
		public IToken constant;
		public ITerminalNode CONSTANT() { return GetToken(ExpressionParser.CONSTANT, 0); }
		public ConstantContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DotContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode DOT() { return GetToken(ExpressionParser.DOT, 0); }
		public DotContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RelationalContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode RELATIONALOP() { return GetToken(ExpressionParser.RELATIONALOP, 0); }
		public RelationalContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelational(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MethodContext : EContext {
		public IToken method;
		public ITerminalNode LPAREN() { return GetToken(ExpressionParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(ExpressionParser.RPAREN, 0); }
		public ITerminalNode METHOD() { return GetToken(ExpressionParser.METHOD, 0); }
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(ExpressionParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(ExpressionParser.COMMA, i);
		}
		public MethodContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethod(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryContext : EContext {
		public IToken op;
		public EContext val;
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public ITerminalNode BITWISENOT() { return GetToken(ExpressionParser.BITWISENOT, 0); }
		public ITerminalNode ADDOP() { return GetToken(ExpressionParser.ADDOP, 0); }
		public ITerminalNode BANG() { return GetToken(ExpressionParser.BANG, 0); }
		public UnaryContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalOrContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode LOGICALOR() { return GetToken(ExpressionParser.LOGICALOR, 0); }
		public LogicalOrContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SimpleContext : EContext {
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public SimpleContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimple(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AddUnitsContext : EContext {
		public EContext val1;
		public UnitsContext unitsVal;
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public UnitsContext units() {
			return GetRuleContext<UnitsContext>(0);
		}
		public AddUnitsContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddUnits(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnitConversionContext : EContext {
		public EContext val1;
		public IToken op;
		public UnitsContext val2;
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public ITerminalNode CONVERSION() { return GetToken(ExpressionParser.CONVERSION, 0); }
		public UnitsContext units() {
			return GetRuleContext<UnitsContext>(0);
		}
		public UnitConversionContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnitConversion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode MULTOP() { return GetToken(ExpressionParser.MULTOP, 0); }
		public MultContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMult(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BitwiseXorContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode BITWISEXOR() { return GetToken(ExpressionParser.BITWISEXOR, 0); }
		public BitwiseXorContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitwiseXor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BitwiseOrContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode BITWISEOR() { return GetToken(ExpressionParser.BITWISEOR, 0); }
		public BitwiseOrContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitwiseOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalAndContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode LOGICALAND() { return GetToken(ExpressionParser.LOGICALAND, 0); }
		public LogicalAndContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BitwiseAndContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode BITWISEAND() { return GetToken(ExpressionParser.BITWISEAND, 0); }
		public BitwiseAndContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitwiseAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryEndContext : EContext {
		public ValueContext val;
		public IToken op;
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ITerminalNode BANG() { return GetToken(ExpressionParser.BANG, 0); }
		public UnaryEndContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryEnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqualityContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode EQUALITYOP() { return GetToken(ExpressionParser.EQUALITYOP, 0); }
		public EqualityContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquality(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExpContext : EContext {
		public EContext val1;
		public IToken op;
		public EContext val2;
		public EContext[] e() {
			return GetRuleContexts<EContext>();
		}
		public EContext e(int i) {
			return GetRuleContext<EContext>(i);
		}
		public ITerminalNode EXPOP() { return GetToken(ExpressionParser.EXPOP, 0); }
		public ExpContext(EContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExpressionParserVisitor<TResult> typedVisitor = visitor as IExpressionParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EContext e() {
		return e(0);
	}

	private EContext e(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		EContext _localctx = new EContext(Context, _parentState);
		EContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_e, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				_localctx = new MethodContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 62; ((MethodContext)_localctx).method = Match(METHOD);
				State = 63; Match(LPAREN);
				State = 72;
				_la = TokenStream.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << METHOD) | (1L << BANG) | (1L << ADDOP) | (1L << BITWISENOT) | (1L << CONSTANT) | (1L << STRSTART) | (1L << VSTRSTART) | (1L << ISTRSTART) | (1L << VISTRSTART) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << INTEGER) | (1L << FLOAT) | (1L << HEX) | (1L << VARIABLE))) != 0)) {
					{
					State = 64; e(0);
					State = 69;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==COMMA) {
						{
						{
						State = 65; Match(COMMA);
						State = 66; e(0);
						}
						}
						State = 71;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					}
				}

				State = 74; Match(RPAREN);
				}
				break;
			case 2:
				{
				_localctx = new ParensContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 75; Match(LPAREN);
				State = 76; ((ParensContext)_localctx).val = e(0);
				State = 77; Match(RPAREN);
				}
				break;
			case 3:
				{
				_localctx = new UnaryContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 79;
				((UnaryContext)_localctx).op = TokenStream.Lt(1);
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BANG) | (1L << ADDOP) | (1L << BITWISENOT))) != 0)) ) {
					((UnaryContext)_localctx).op = ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 80; ((UnaryContext)_localctx).val = e(18);
				}
				break;
			case 4:
				{
				_localctx = new UnaryEndContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 81; ((UnaryEndContext)_localctx).val = value();
				State = 82; ((UnaryEndContext)_localctx).op = Match(BANG);
				}
				break;
			case 5:
				{
				_localctx = new ConstantContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 84; ((ConstantContext)_localctx).constant = Match(CONSTANT);
				}
				break;
